--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   sharelist:
-    image: reruin/sharelist
+    image: penjune/sharelist
     volumes:
       - $HOME/sharelist:/sharelist/cache
     ports:
